# tadeo-eCar-ws

./: .gitignore  README.md
Docker/: .env  Dockerfile  build.sh  compile.txt  docker-compose.yml  enter.sh  start.sh  stop.sh
documentation/: README.md
documentation/01-introduccion/: README.md
documentation/02-conceptos-basicos/: README.md
documentation/03-nodos/: README.md
documentation/04-topicos/: README.md
documentation/05-servicios/: README.md
documentation/06-acciones/: README.md
documentation/07-parametros/: README.md
documentation/08-launch/: README.md
documentation/09-tf2/: README.md
documentation/10-navigation/: README.md
documentation/11-slam/: README.md
documentation/12-behavior-trees/: README.md
documentation/13-control/: README.md
documentation/14-perception/: README.md
documentation/15-safety/: README.md
documentation/16-integration/: README.md
documentation/17-debug/: README.md
documentation/18-testing/: README.md
documentation/19-deployment/: README.md
documentation/20-advanced/: README.md
tadeo_ecar_behavior/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_behavior/behavior_trees/: exploration_behavior.xml  main_behavior.xml  patrol_behavior.xml
tadeo_ecar_behavior/config/: behavior_params.yaml
tadeo_ecar_behavior/include/tadeo_ecar_behavior/: behavior_types.hpp
tadeo_ecar_behavior/launch/: behavior_system.launch.py
tadeo_ecar_behavior/src/: behavior_manager_node.cpp  behavior_monitor_node.cpp  state_machine_node.cpp
tadeo_ecar_behavior/src/bt_action_nodes/: exploration_actions.cpp  navigation_actions.cpp  patrol_actions.cpp  safety_conditions.cpp  utility_actions.cpp
tadeo_ecar_bringup/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_bringup/config/: system_params.yaml
tadeo_ecar_bringup/launch/: tadeo_ecar_full_system.launch.py  tadeo_ecar_hardware.launch.py  tadeo_ecar_simulation.launch.py
tadeo_ecar_bringup/params/: hardware_params.yaml
tadeo_ecar_bringup/rviz/: tadeo_ecar_full_system.rviz
tadeo_ecar_bringup/scripts/: start_system.sh  system_monitor.py
tadeo_ecar_config/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_config/config/: control_params.yaml  nav2_params.yaml  robot_params.yaml
tadeo_ecar_control/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_control/include/tadeo_ecar_control/: wheel_controller.hpp
tadeo_ecar_control/launch/: control_system.launch.py
tadeo_ecar_control/src/: four_wheel_steering_controller_node.cpp  vehicle_dynamics_node.cpp  wheel_controller_node.cpp
tadeo_ecar_description/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_description/config/: bridge_config.yaml
tadeo_ecar_description/launch/: display.launch.py  gazebo.launch.py  gazebo_rviz.launch.py  gazebo_simple.launch.py  rviz_display.launch.py  simulation.launch.py  tadeo_ecar_ignition.launch.py
tadeo_ecar_description/meshes/chassis/: chasis.stl  chasis_base.stl
tadeo_ecar_description/meshes/suspension/: suspension.stl
tadeo_ecar_description/meshes/wheels/: wheel.stl
tadeo_ecar_description/rviz/: tadeo_ecar.rviz
tadeo_ecar_description/urdf/: gazebo.xacro  gazebo_ignition.xacro  gazebo_ignition_lidar_only.xacro  materials.xacro  tadeo_ecar.urdf.xacro  tadeo_ecar_base.xacro  tadeo_ecar_base.xacro.backup  tadeo_ecar_base_lidar_only.xacro  tadeo_ecar_lidar_test.urdf.xacro  tadeo_ecar_wheels.xacro
tadeo_ecar_description/worlds/: empty_world.world  empty_world_ignition.sdf
tadeo_ecar_interfaces/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_interfaces/action/: Calibrate.action  Dock.action  FollowPath.action  NavigateToGoal.action
tadeo_ecar_interfaces/srv/: CalibrateWheels.srv  EmergencyStop.srv  ExecuteBehavior.srv  GetSystemStatus.srv  NavigateToGoal.srv  SaveMap.srv  SetRobotMode.srv
tadeo_ecar_localization/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_localization/include/tadeo_ecar_localization/: kalman_filter_base.hpp
tadeo_ecar_localization/launch/: localization_system.launch.py
tadeo_ecar_localization/src/: ekf_localization_node.cpp  map_matcher_node.cpp  sensor_fusion_localization_node.cpp  ukf_localization_node.cpp
tadeo_ecar_msgs/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_msgs/msg/: NavigationState.msg  RobotStatus.msg  SafetyStatus.msg  SystemHealth.msg  WheelStates.msg
tadeo_ecar_navigation/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_navigation/config/: navigation_params.yaml
tadeo_ecar_navigation/include/tadeo_ecar_navigation/: navigation_types.hpp
tadeo_ecar_navigation/launch/: navigation_system.launch.py
tadeo_ecar_navigation/rviz/: navigation.rviz
tadeo_ecar_navigation/src/: mission_executor_node.cpp  navigation_controller_node.cpp  navigation_monitor_node.cpp  waypoint_manager_node.cpp
tadeo_ecar_perception/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_perception/config/: perception_params.yaml
tadeo_ecar_perception/launch/: perception_system.launch.py
tadeo_ecar_perception/src/: camera_processor_node.cpp  imu_processor_node.cpp  lidar_processor_node.cpp  sensor_fusion_node.cpp
tadeo_ecar_planning/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_planning/config/: planning_params.yaml
tadeo_ecar_planning/include/tadeo_ecar_planning/: planning_types.hpp
tadeo_ecar_planning/launch/: planning_system.launch.py
tadeo_ecar_planning/src/: global_path_planner_node.cpp  local_path_planner_node.cpp  path_manager_node.cpp  trajectory_optimizer_node.cpp
tadeo_ecar_safety/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_safety/include/tadeo_ecar_safety/: safety_types.hpp
tadeo_ecar_safety/launch/: safety_system.launch.py
tadeo_ecar_safety/src/: collision_avoidance_node.cpp  emergency_stop_node.cpp  safety_monitor_node.cpp  watchdog_node.cpp
tadeo_ecar_slam/: CMakeLists.txt  README.md  package.xml
tadeo_ecar_slam/include/tadeo_ecar_slam/: slam_types.hpp
tadeo_ecar_slam/launch/: slam_system.launch.py
tadeo_ecar_slam/src/: graph_slam_node.cpp  grid_slam_node.cpp  loop_detector_node.cpp  map_manager_node.cpp
