<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tadeo_ecar_description</name>
  <version>0.0.0</version>
  <description>Plataforma robótica autónoma para logística universitaria en interiores. Robot eléctrico omnidireccional 4WD 4WS con capacidades de navegación autónoma, SLAM, visión computacional y planificación de trayectorias usando ROS2 Humble.</description>
  <maintainer email="ing.marioalvarezvallejo@gmail.com">Semillero Robótica</maintainer>
  
  <author email="ing.marioalvarezvallejo@gmail.com">Semillero Robótica Development Team</author>
  <license>Proprietary</license>
  
  <url type="website">https://tadeoroboticsgroup.github.io/TadeoRoboticsGroup/</url>
  <url type="bugtracker">https://github.com/TadeoRoboticsGroup/tadeo-eCar-ws/issues</url>
  <url type="repository">https://github.com/TadeoRoboticsGroup/tadeo-eCar-ws</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de build únicamente -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <!-- Dependencias solo de ejecución -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ignition-gazebo6</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>