<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tadeo_ecar_navigation</name>
  <version>1.0.0</version>
  <description>Sistema de navegaci贸n de alto nivel para robot aut贸nomo Tadeo eCar</description>
  <maintainer email="ing.marioalvarezvallejo@gmail.com">Semillero Rob贸tica</maintainer>
  
  <author email="ing.marioalvarezvallejo@gmail.com">Semillero Rob贸tica Development Team</author>
  <license>Proprietary</license>
  
  <url type="website">https://tadeoroboticsgroup.github.io/TadeoRoboticsGroup/</url>
  <url type="bugtracker">https://github.com/TadeoRoboticsGroup/tadeo-eCar-ws/issues</url>
  <url type="repository">https://github.com/TadeoRoboticsGroup/tadeo-eCar-ws</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>angles</depend>
  <depend>tadeo_ecar_msgs</depend>
  <depend>tadeo_ecar_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>